<resources>
    <string name="LOGIN_ADMIT_TYPE">LOGIN_ADMIT_TYPE</string>
    <string name="LOGIN_ADMIT_ANY">LOGIN_ADMIT_ANY</string>
    <string name="LOGIN_ADMIT_ADMIN">LOGIN_ADMIT_ADMIN</string>
    <string name="LOGIN_ACTION_TYPE">LOGIN_ACTION_TYPE</string>
    <string name="LOGIN_ACTION_CREATE_HOLD">LOGIN_ACTION_CREATE_HOLD</string>
    <string name="LOGIN_ACTION_DESTROY_HOLD">LOGIN_ACTION_DESTROY_HOLD</string>
    <string name="LOGIN_ACTION_MANAGE_SYSTEM">LOGIN_ACTION_MANAGE_SYSTEM</string>
    <string name="HOLD_VIEW_TARGET_BOOK_TAG">TAG_TARGET_BOOK</string>
    <string name="HOLD_VIEW_TARGET_FEE_TAG">TAG_TARGET_FEE</string>
    <string name="app_name">Library</string>

    <string name="CREATE_USER">Create User</string>
    <string name="CREATE_HOLD">Place Hold</string>
    <string name="DESTROY_HOLD">Cancel Hold</string>
    <string name="MANAGE_SYSTEM">Manage System</string>
    <string name="PASSWORD">Password</string>
    <string name="USERNAME">Username</string>
    <string name="LOGIN">Login</string>
    <string name="CONFIRM">Confirm</string>

    <string name="CREATE_BOOK_TITLE_HINT">Enter title</string>
    <string name="CREATE_BOOK_AUTHOR_HINT">Enter author</string>
    <string name="CREATE_BOOK_ISBN_HINT">Enter isbn</string>
    <string name="CREATE_BOOK_FEE_HINT">Enter hourly fee</string>

    <string name="CREATE_BOOK_PROMPT">Add a book?</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="OK">OK</string>
    <string name="CHECKOUT">Pickup</string>
    <string name="CHECKIN">Dropoff</string>
    <string name="HOLD">Reservation #</string>
    <string name="TITLE">Title</string>
    <string name="FEE">Fee</string>
    <string name="USER">User</string>
</resources>
